# rag-pipelines

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  codecov.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  code_checks.yml  integration_tests.yml  tests.yml  unit_tests.yml
scripts/: self_rag_evaluation.py
src/rag_pipelines/: __init__.py
src/rag_pipelines/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
src/rag_pipelines/baml_src/: clients.baml  earnings_calls.baml  financebench.baml  generators.baml  healthbench.baml  medcasereasoning.baml  metadata_enricher.baml  metamedqa.baml  pubmed.baml
src/rag_pipelines/earnings_calls/: __init__.py  earnings_calls_indexing.py  earnings_calls_indexing_config.yml  earnings_calls_rag.py  earnings_calls_rag_config.yml
src/rag_pipelines/evaluation/: __init__.py
src/rag_pipelines/financebench/: __init__.py  financebench_indexing.py  financebench_indexing_config.yml  financebench_rag.py  financebench_rag_config.yml
src/rag_pipelines/healthbench/: __init__.py  healthbench_indexing.py  healthbench_indexing_config.yml  healthbench_rag.py  healthbench_rag_config.yml
src/rag_pipelines/indexing_pipelines/fiqa/: pinecone_instructor_index.py  pinecone_mpnet_index.py
src/rag_pipelines/llms/: __init__.py  groq.py
src/rag_pipelines/medcasereasoning/: __init__.py  medcasereasoning_indexing.py  medcasereasoning_indexing_config.yml  medcasereasoning_rag.py  medcasereasoning_rag_config.yml
src/rag_pipelines/metamedqa/: __init__.py  metamedqa_indexing.py  metamedqa_indexing_config.yml  metamedqa_rag.py  metamedqa_rag_config.yml
src/rag_pipelines/pipelines/: crag.py  rag.py  self_rag.py
src/rag_pipelines/pipelines/fiqa/: dense_diversity_instructor_rag.py  dense_diversity_litm_instructor_rag.py  dense_instructor_rag.py  dense_litm_instructor_rag.py  dense_similarity_diversity_instructor_rag.py  dense_similarity_diversity_litm_instructor_rag.py  dense_similarity_instructor_rag.py  dense_similarity_litm_instructor_rag.py  sparse_dense_diversity_instructor_rag.py  sparse_dense_diversity_litm_instructor_rag.py  sparse_dense_instructor_rag.py  sparse_dense_litm_instructor_rag.py  sparse_dense_similarity_diversity_instructor_rag.py  sparse_dense_similarity_diversity_litm_instructor_rag.py  sparse_dense_similarity_instructor_rag.py  sparse_dense_similarity_litm_instructor_rag.py  sparse_instructor_rag.py
src/rag_pipelines/prompts/: __init__.py
src/rag_pipelines/pubmedqa/: __init__.py  pubmedqa_indexing.py  pubmedqa_indexing_config.yml  pubmedqa_rag.py  pubmedqa_rag_config.yml
src/rag_pipelines/query_transformer/: __init__.py  query_transformer.py  router.py
src/rag_pipelines/rankers/instructor_xl/fiqa/: dense.py  dense_diversity.py  dense_diversity_litm.py  dense_litm.py  dense_similarity.py  dense_similarity_diversity.py  dense_similarity_diversity_litm.py  dense_similarity_litm.py  sparse.py  sparse_dense.py  sparse_dense_diversity.py  sparse_dense_diversity_litm.py  sparse_dense_litm.py  sparse_dense_similarity.py  sparse_dense_similarity_diversity.py  sparse_dense_similarity_diversity_litm.py  sparse_dense_similarity_litm.py
src/rag_pipelines/rankers/mpnet/fiqa/: dense.py  dense_diversity_litm_mpnet.py  dense_diversity_mpnet.py  dense_litm_mpnet.py  dense_similarity.py  dense_similarity_diversity.py  dense_similarity_diversity_litm_mpnet.py  dense_similarity_litm_mpnet.py
src/rag_pipelines/retrieval_evaluator/: __init__.py  document_grader.py  query_decision_maker.py  retrieval_evaluator.py
src/rag_pipelines/unstructured/: unstructured_chunker.py  unstructured_pdf_loader.py
src/rag_pipelines/utils/: __init__.py
src/rag_pipelines/utils/contextual_ranker/: __init__.py  contextual_ranker.py
src/rag_pipelines/utils/metadata_enricher/: README.md  __init__.py  dynamic_schema_enricher.py  fixed_schema_enricher.py  metadata_enricher.py  structural_metadata_enricher.py
src/rag_pipelines/utils/metadata_extractor/: __init__.py  metadata_extractor.py
src/rag_pipelines/utils/unstructured/: __init__.py  unstructured_api_loader.py  unstructured_chunker.py  unstructured_pdf_loader.py
src/rag_pipelines/vectordb/: __init__.py  milvus.py  milvus_retriever.py
tests/: __init__.py
tests/rag_pipelines/: test_contextual_ranker.py  test_earnings_calls_rag.py  test_financebench_rag.py  test_metadata_extractor.py  test_metamedqa_indexing.py  test_pubmedqa_indexing.py  test_unstructured_chunker.py
tests/rag_pipelines/pipelines/: test_earnings_calls_indexing.py  test_earnings_calls_rag.py  test_financebench_indexing.py  test_financebench_rag.py  test_healthbench_indexing.py  test_healthbench_rag.py  test_medcasereasoning_indexing.py  test_medcasereasoning_rag.py  test_metamedqa_indexing.py  test_metamedqa_rag.py  test_pubmedqa_indexing.py  test_pubmedqa_rag.py
tests/rag_pipelines/utils/: test_unstructured_api_loader.py  test_unstructured_document_loader.py
tests/rag_pipelines/utils/metadata_enricher/: __init__.py  conftest.py
tests/rag_pipelines/utils/metadata_enricher/dynamic_schema_enricher/: __init__.py  test_cache_keys.py  test_edge_cases.py  test_initialization.py
tests/rag_pipelines/utils/metadata_enricher/fixed_schema_enricher/: __init__.py  test_caching_and_edge_cases.py  test_initialization_and_extraction.py
tests/rag_pipelines/utils/metadata_enricher/metadata_enricher/: __init__.py  test_document_transformation.py  test_enrichment_modes_and_strategies.py  test_initialization_and_config.py  test_integration_pipeline.py  test_query_metadata_extraction.py
tests/rag_pipelines/utils/metadata_enricher/structural_metadata_enricher/: __init__.py  test_cache_keys.py  test_context_application.py  test_edge_cases_and_special_input.py  test_extraction_and_language.py
